--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -120,10 +120,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="banner-description"
              data-filter-selected$="{% raw %}[[_toBoolean(selectedFilter)]]{% endraw %}">
           <p class="banner-info">
-            Codelabs provide a guided, tutorial, hands-on
-            coding experience. Most codelabs will step you through the process
-            of building a small application, or adding a new feature to an
-            existing application.
+            Codelabs has a collection of guided, hands-on learning and coding experience for various modern technologies.
+            Most codelabs will take you through the process of building a small application or adding a new feature to an existing application.
           </p>
         {%- else -%}
           <div class="banner-description">
@@ -247,10 +245,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <li><a href="https://medium.com/@arielmagbanua">Medium</a></li>
           </ul>
           <ul>
-            <li><a href="https://twitter.com/Ariel_Magbanua">X | Twitter</a></li>
+            <li><a href="https://stackoverflow.com/users/2076848/ariel-magbanua">StackOverFlow</a></li>
           </ul>
           <ul>
-            <li><a href="https://docs.google.com/document/d/149plpJU-66WZATO3NisRpKrqEIRWYyzmN3jmkQRaEdw/edit#heading=h.jpv9v4b642w5">Resume</a></li>
+            <li><a href="https://twitter.com/Ariel_Magbanua">X | Twitter</a></li>
           </ul>
         </div>
         <div class="link-list projects">
