--- a/app/views/default/index.html
+++ b/app/views/default/index.html
@@ -272,9 +272,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="footerbar">
       <div class="site-width layout horizontal center justified">
         <span>
-          <a href="https://example.com">Terms</a>
+          <a href="codelabs/terms-conditions/#0">Terms</a>
           &nbsp; | &nbsp;
-          <a href="https://example.com">Privacy</a>
+          <a href="codelabs/privacy-statement/#0">Privacy</a>
         </span>
       </div>
     </div>
